openshift/8k-worker-query.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    alpha.image.policy.openshift.io/resolve-names: '*'
    app.openshift.io/route-disabled: "false"
    app.openshift.io/vcs-ref: main
    app.openshift.io/vcs-uri: https://github.com/oss-aspen/8Knot.git
    image.openshift.io/triggers: '[{"from":{"kind":"ImageStreamTag","name":"eightknot-app:latest"},"fieldPath":"spec.template.spec.containers[?(@.name==\"eightknot-app\")].image","pause":"false"}]'
  labels:
    app: eightknot-worker-query
    app.kubernetes.io/component: eightknot-worker-query
    app.kubernetes.io/instance: eightknot-worker-query
    app.kubernetes.io/name: eightknot-worker-query
    app.kubernetes.io/part-of: eightknot-app
    app.openshift.io/runtime: python
    app.openshift.io/runtime-version: 3.9-ubi8
  name: eightknot-worker-query
spec:
  replicas: 1
  selector:
    matchLabels:
      app: eightknot-worker-query
  strategy:
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: eightknot-worker-query
    spec:
      containers:
      - command:
          [ "celery", "-A", "app:celery_app", "worker", "--loglevel=INFO", "-Q", "data", "-c", "4" ]
        image: eightknot-app:latest
        imagePullPolicy: Always
        name: eightknot-app
        ports:
        - containerPort: 8080
          protocol: TCP
        resources: {}
